# decision-tree-haskell

./: .gitignore  Dockerfile  README  README.md  build-frontend.sh  haskell-decision-tree.cabal  haskell-webserver.cabal  stack.yaml
datasets/: performance-test-dataset.json
src/: DecisionTree.hs  DeleteMe.hs  Entropy.hs  Filter.hs  GetFilters.hs  Main.hs  ParseFilter.hs  ParseJson.hs  Train.hs
src/core/: Dataset.hs  DecisionTree.hs  Entropy.hs  Filter.hs  GetFilters.hs  GetMetaData.hs  StatisticalSignificance.hs  Train.hs
src/test/: DecisionTreeTest.hs  EntropyTest.hs  FilterTest.hs  StatisticsTest.hs  TestMain.hs  TrainTest.hs
src/test/performance/: PerformanceTest.hs
src/web/backend/: Main.hs
src/web/backend/Endpoint/: Dataset.hs  Index.hs  Model.hs
src/web/backend/Endpoint/Internal/: HandleFiles.hs
src/web/frontend/: .eslintrc.json  BuildFrontend.hs  index.html  package.json
src/web/frontend/public/: index.html
src/web/frontend/src/: button.js  datasets.js  index.css  index.js  index.jsx  itemheader.js  main.jsx  models.js  rounded.js  store.js  train.js
src/web/frontend/src/actions/: datasets.js  models.js
src/web/frontend/src/communication/: deletedataset.js  deletemodel.js  evaluate.js  train.js  uploaddataset.js
src/web/frontend/src/datasets/: datasetlist.js  datasetlist.jsx  datasets.js  datasets.jsx  uploadbutton.js  uploadbutton.jsx
src/web/frontend/src/misc/: button.jsx  itemheader.js  itemheader.jsx  misc.js  rounded.jsx  sectionheader.js  sectionheader.jsx
src/web/frontend/src/models/: modelparameter.js  modelparameter.jsx  models.js  models.jsx
src/web/frontend/src/reducers/: datasets.js  index.js  models.js
src/web/frontend/src/train/: train.js  train.jsx  variableselect.js  variableselect.jsx
test/: FilterTest.hs  ParseFilterTest.hs  TestMain.hs  TrainTest.hs
