name:                haskell-decision-tree
version:             0.1.0.0
license-file:        LICENSE
author:              axel.ulmestig@gmail.com
maintainer:          axel.ulmestig@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable server
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       warp,
                       wai,
                       wai-middleware-static,
                       http-types,
                       blaze-builder,
                       bytestring,
                       text,
                       aeson,
                       containers,
                       directory >= 1.2.5.0
  hs-source-dirs:      src/core, src/web/backend
  default-language:    Haskell2010

executable build-frontend
  main-is:             BuildFrontend.hs
  build-depends:       base,
                       process
  hs-source-dirs:      src/web/frontend
  default-language:    Haskell2010

Test-Suite TestSuite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/test, src/core
  main-is:             TestMain.hs
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       aeson,
                       containers
  default-language:    Haskell2010
  ghc-options: -fno-warn-tabs
