name:                haskell-decision-tree
version:             0.1.0.0
author:              axel.ulmestig@gmail.com
maintainer:          axel.ulmestig@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable server
  main-is:             Main.hs
  build-depends:       base,
                       warp,
                       wai,
                       wai-middleware-static,
                       http-types,
                       blaze-builder,
                       bytestring,
                       text,
                       aeson,
                       containers,
                       directory >= 1.2.5.0,
                       statistics,
                       parallel
  hs-source-dirs:      src/core, src/web/backend
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts
  other-modules:       Dataset,
                       DecisionTree
                       Endpoint.Dataset
                       Endpoint.Index
                       Endpoint.Internal.HandleFiles
                       Endpoint.Model
                       Entropy
                       Filter
                       GetFilters
                       GetMetaData
                       StatisticalSignificance
                       Train

executable build-frontend
  main-is:             BuildFrontend.hs
  build-depends:       base,
                       process
  hs-source-dirs:      src/web/frontend
  default-language:    Haskell2010

executable performance-test
  main-is:             PerformanceTest.hs
  build-depends:       base,
                       bytestring,
                       text,
                       aeson,
                       containers,
                       directory >= 1.2.5.0,
                       statistics,
                       parallel,
                       time
  hs-source-dirs:      src/core, src/test/performance
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts
  other-modules:       Dataset,
                       DecisionTree
                       Entropy
                       Filter
                       GetFilters
                       GetMetaData
                       StatisticalSignificance
                       Train

Test-Suite TestSuite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/test, src/core
  main-is:             TestMain.hs
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       aeson,
                       containers,
                       statistics,
                       parallel
  default-language:    Haskell2010
  ghc-options: -fno-warn-tabs -threaded -rtsopts
  other-modules:       Dataset
                       DecisionTree
                       DecisionTreeTest
                       Entropy
                       EntropyTest
                       Filter
                       FilterTest
                       GetFilters
                       GetMetaData
                       StatisticalSignificance
                       StatisticsTest
                       Train
                       TrainTest
